packages/beff-core/tests/snapshots/print_parser__tests__ok_array_spread_declare2.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        declare const AllArr1: [\"a\", \"b\"] \n        type Arr1 = typeof AllArr1[number];\n        parse.buildParsers<{ Arr1: Arr1 }>();\n      \"#)"
---
type Arr1 = ("a" | "b");


type BuiltParsers = {
  Arr1: Arr1,
}
