packages/beff-core/tests/snapshots/print_parser__tests__ok_conditional_bigint_subtypes.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        type A = bigint;\n        type B = string;\n        type C = A extends B ? true : false;\n        type D = B extends A ? true : false;\n        // expect C to be false and D to be false\n        parse.buildParsers<{ C: C, D: D }>();\n      \"#)"
---
--- entry.ts ---
type A = bigint;
type B = string;
type C = A extends B ? true : false;
type D = B extends A ? true : false;
// expect C to be false and D to be false
parse.buildParsers<{ C: C, D: D }>();
--------------------------------
type A = bigint;

type B = string;

type C = false;

type D = false;


type BuiltParsers = {
  C: C,
  D: D,
}
