packages/beff-core/tests/snapshots/print_parser__tests__ok_conditional_string_subtypes.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        type A = \"a\";\n        type B = string;\n        type C = A extends B ? true : false;\n        type D = B extends A ? true : false;\n        // expect C to be true and D to be false\n        parse.buildParsers<{ C: C, D: D }>();\n      \"#)"
---
type A = "a";

type B = string;

type C = true;

type D = false;


type BuiltParsers = {
  C: C,
  D: D,
}
