packages/beff-core/tests/snapshots/print_parser__tests__ok_either.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: ok(from)
---
type A = { "_tag": "Left"; "left": string; [key: string]: any } | {
  "_tag": "Right";
  "right": number;
  [key: string]: any;
};

