packages/beff-core/tests/snapshots/print_parser__tests__ok_enum_member.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        export enum Enum {\n            A = \"a\",\n            B = \"b\",\n        }\n        export type X = Enum.A\n\n        parse.buildParsers<{ X: X }>();\n      \"#)"
---
type X = "a";
type X = X;

