packages/beff-core/tests/snapshots/print_parser__tests__ok_keyof_record2.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n\n        const a = {\n        };\n\n        type A = keyof typeof a;\n\n        const b = {\n          b: \"b\",\n          y: \"y\",\n          u: \"u\",\n        };\n\n        type B = keyof typeof b;\n\n        type C = A | B;\n\n        type Rec = Record<C, string>;\n\n        parse.buildParsers<{ C:C, Rec: Rec }>();\n      \"#)"
---
type A = never;

type B = ("b" | "u" | "y");

type C = (A | B);

type Rec = { "b": string, "u": string, "y": string };


type BuiltParsers = {
  C: C,
  Rec: Rec,
}
