packages/beff-core/tests/snapshots/print_parser__tests__ok_object.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        parse.buildParsers<{ A: Object }>();\n      \"#)"
---
type Object = Record<string, any>;
type A = Object;

